--- a/stream-common/src/main/resources/common-config.properties
+++ b/stream-common/src/main/resources/common-config.properties
@@ -2,6 +2,7 @@
 env=${env}
 
 # MySQL
+mysql.host=${mysql.host}
 mysql.port=${mysql.port}
 mysql.url=${mysql.url}
 mysql.timezone=${mysql.timezone}
@@ -24,7 +25,7 @@ ali.key=${ali.key}
 ali.pwd=${ali.pwd}
 
 # kafka cdh
-kafka.bootstrap.servers=${Kafka.bootstrap.servers}
+kafka.bootstrap.servers=${kafka.bootstrap.servers}
 REALTIME.KAFKA.LOG.TOPIC=${REALTIME.KAFKA.LOG.TOPIC}
 kafka.topic.db=${kafka.topic.db}
 kafka.dirty.topic=${kafka.dirty.topic}
