--- a/stream-common/pom.xml
+++ b/stream-common/pom.xml
@@ -59,6 +59,12 @@
             <version>1.10.3</version>
             <!--                <scope>provided</scope>-->
         </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.4.7</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
