--- a/realtime/pom.xml
+++ b/realtime/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>parquet-avro</artifactId>
             <version>1.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.8.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
